# campo-de-batalha

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/Modules/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
old_ide_data/: Campo de Batalha.cbp  Campo de Batalha.depend  Campo de Batalha.layout
resources/: Sprite-sand.aseprite
src/: Constants.hpp  Explosion.hpp  InputHandler.cpp  InputHandler.hpp  LowLevelRenderer.cpp  LowLevelRenderer.hpp  Physics.cpp  Physics.hpp  Player.hpp  Projectile.hpp  SpriteSet.cpp  SpriteSet.hpp  main.cpp
